# ChangeLog for app-emulation/kvm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/kvm/ChangeLog,v 1.32 2009/04/28 01:47:35 dang Exp $

*kvm-85 (28 Apr 2009)

  28 Apr 2009; Daniel Gryniewicz <dang@gentoo.org> +kvm-85.ebuild:
  Bump to kvm-85

  This version splits the userspace (this package) from the kernel modules
  (kvm-kmod), aside from lots of other fixes.

  14 Apr 2009; Daniel Gryniewicz <dang@gentoo.org> -kvm-75.ebuild,
  -kvm-77.ebuild, -kvm-78.ebuild, -kvm-79.ebuild, -kvm-79-r1.ebuild,
  kvm-81.ebuild, kvm-82.ebuild, kvm-83.ebuild, kvm-84.ebuild:
  Update homepage and clean really old versions

  13 Apr 2009; Daniel Gryniewicz <dang@gentoo.org> kvm-84.ebuild:
  Add support for 32bit userland

  09 Mar 2009; Christian Faulhammer <fauli@gentoo.org> kvm-84.ebuild:
  Port to EAPI=2

*kvm-84 (18 Feb 2009)

  18 Feb 2009; Daniel Gryniewicz <dang@gentoo.org> +kvm-84.ebuild:
  Bump to kvm-84

  08 Feb 2009; Daniel Gryniewicz <dang@gentoo.org> +files/kvm-83-vtd.patch,
  kvm-83.ebuild:
  Fix kvm with vtd; bug #256685

*kvm-83 (26 Jan 2009)

  26 Jan 2009; Daniel Gryniewicz <dang@gentoo.org> +kvm-83.ebuild:
  Bump to kvm-83

*kvm-82 (05 Jan 2009)

  05 Jan 2009; Daniel Gryniewicz <dang@gentoo.org> kvm-81.ebuild,
  +kvm-82.ebuild:
  Bump to 82

  This release adds support for nested virtualization, a feature which
  allows you to run kvm (and possibly other hypervisors) inside a guest.
  This is an experimental feature and is only available on AMD hosts.

  Also fixes bug #251903

*kvm-81 (16 Dec 2008)

  16 Dec 2008; Daniel Gryniewicz <dang@gentoo.org> +kvm-79-r1.ebuild,
  +kvm-81.ebuild:
  Bump to kvm-81
	- Fixed performance regression in qcow2 files
	- Several display fixes
	- Several virtio fixes/cleanups/speedups
	- Clock fixes

*kvm-79-r1 (10 Dec 2008)

  10 Dec 2008; Daniel Gryniewicz <dang@gentoo.org> +kvm-79-r1.ebuild:
  Bump to kvm-79-r1