@@ -15,13 +15,13 @@ EBUILD kvm-81.ebuild 6987 RMD160 3c6536c037bc6eb73c87227a7513a04e953bf026 SHA1 8
 EBUILD kvm-82.ebuild 6943 RMD160 cb9fbc23b3c3d349004ff20bc435960bddc10ec4 SHA1 f22d1e936c478259bcedf1eb516f1e6050ba08fb SHA256 79ae74786d62e8845a0264db0908e6a9d6e00e43df6cc8209efc330690583292
 EBUILD kvm-83.ebuild 7019 RMD160 4789a565463a3202365438a724c127f74c8fd7d6 SHA1 d5a2ef27dd7aa04f8d0a99909251d075f0ef9e3a SHA256 2e6b247aaee72c9e5c1d7632f7348927bdce2e723cfd7c888f70c1febec54393
 EBUILD kvm-84.ebuild 7064 RMD160 2c15c4866c504d26aa7117ebdb5a9a9cb7b73f98 SHA1 620204d39a2a7cb1dffe7a46886304418f8f4a3a SHA256 d80adf7abc6ddb0a852ef2b6cacc84fdcb71867d3c7499ebb36993a201a69d3d
-EBUILD kvm-85.ebuild 6505 RMD160 1be3867b54a51a84a9ea2ad9aa8b850d4627eaf1 SHA1 0a2f92048c4e6fc9c3883b58e03f80335895e7a9 SHA256 6e42418a38268a65a15e50135c752d45a44f32f93dc26311e2f3dbfeb9e97957
-MISC ChangeLog 8433 RMD160 f80d4ef992698247af54dabcad3adfca5246be04 SHA1 a7b639c923dfed26ae74c197f75abd2c3c6eafbd SHA256 37271fcb3cde0afeff09573c7478f4b7670f38f3d530e973e79eae2dac8007d4
+EBUILD kvm-85-r1.ebuild 6521 RMD160 a2d45047fa8e7e3f565f97adc1ff392dcd97207e SHA1 2e627adfc18c6fc49b3c8c6bfe0500859860af19 SHA256 e13deee3c4f3e9f34e9bbfab245cfded68daee3360d6f5b82db854b8681205e3
+MISC ChangeLog 8592 RMD160 1f0852b5ca892e0d74bb6603d1fa6cac82171a64 SHA1 8156a0a7c9b511637184bdc6315efba4f207c6da SHA256 db0b45e624794f32229ac55889a9e29ca52633d87c297c704084a1fb7403ad1f
 MISC metadata.xml 1282 RMD160 2c8cc65da23f96cfd73f757000192d4af7b29e9f SHA1 3b84cbafe2190715df0310fe8bde8dc6d483e6df SHA256 af8ea32fd7dedeb7401d4df31016c3e6a4a12d9720577bbb9673d4ae22b3dc54
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFJ9mBSomPajV0RnrERAgFgAJoCFoUN0dr5l85GO2inDfkXGcVINQCeIvhR
-AeW3UmYl8PHVbf6Y53P/IFE=
-=ZqOG
+iD8DBQFJ9wY2omPajV0RnrERAtnYAJ4rHWK2ro6gyvQ22UlifDLNg4akPQCfZLab
+n+s1dm8ujzlkOWpMOLRZm3w=
+=OhtC
 -----END PGP SIGNATURE-----
