@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/kvm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/kvm/ChangeLog,v 1.32 2009/04/28 01:47:35 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/kvm/ChangeLog,v 1.33 2009/04/28 13:35:23 dang Exp $
+
+*kvm-85-r1 (28 Apr 2009)
+
+  28 Apr 2009; Daniel Gryniewicz <dang@gentoo.org> -kvm-85.ebuild,
+  +kvm-85-r1.ebuild:
+  Brown paper bag; kvm support was disabled
 
 *kvm-85 (28 Apr 2009)
 
